force-app/main/default/objects/Kraken_BTCUSD__c/Kraken_BTCUSD__c.object-meta.xml
<CustomObject>
    <label>Kraken_BTCUSD</label>
    <nameField>
        <label>kraken-btcusd Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kraken_BTCUSD</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>