force-app/main/default/objects/Kraken_BTCUSD__c/fields/low__c.field-meta.xml
<CustomField>
    <fullName>low__c</fullName>
    <label>low</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>