force-app/main/default/objects/Kraken_BTCUSD__c/fields/open__c.field-meta.xml
<CustomField>
    <fullName>open__c</fullName>
    <label>open</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>