force-app/main/default/objects/Kraken_BTCUSD__c/fields/unix_time__c.field-meta.xml
<CustomField>
    <fullName>unix_time__c</fullName>
    <externalId>true</externalId>
    <label>unix_time</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>